<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <ImageView
                android:id="@+id/posterImge"
                android:layout_width="132dp"
                android:layout_height="200dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/cremal" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleTextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/card_view"
            android:padding="4dp"
            android:text="@string/title_list_item"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:layout_above="@+id/ratingTextView"
            android:layout_below="@+id/titleTextView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="108dp"
            android:layout_marginRight="108dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/card_view"
            android:layout_toRightOf="@+id/card_view"
            android:text="@string/laprecio" />

        <TextView
            android:id="@+id/infoTextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="82dp"
            android:layout_height="30dp"
            android:layout_below="@+id/titleTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/infoTextView2"
            android:layout_toRightOf="@+id/infoTextView2"
            android:padding="4dp"
            android:text="@string/precios"
            android:textColor="@color/black_200"
            android:textSize="16sp" />

        <Button

            android:id="@+id/btncomprar"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/card_view"
            android:padding="4dp"
            android:text="@string/btncomprar"


            android:textColor="@color/black_200"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ratingTextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/card_view"
            android:padding="4dp"
            android:text="@string/rating"
            android:textColor="#ffeb3b"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_below="@+id/infoTextView"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/ratingTextView"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/all"
                android:src="@drawable/ic_star"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/all"
                android:src="@drawable/ic_star"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/all"
                android:src="@drawable/ic_star"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/all"
                android:src="@drawable/ic_star"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/all"
                android:src="@drawable/ic_star"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>